--- a/react-app/src/components/dashboard-product/dashboard-product.styles.scss
+++ b/react-app/src/components/dashboard-product/dashboard-product.styles.scss
@@ -19,6 +19,10 @@
         list-style: none;
         padding: 0;
     }
+
+    .quantity {
+        padding-bottom: 1em;
+    }
 }
 
 .dashboard-product-with-warning {
