Add products & exercises' toolbars to the dashboard

--- a/react-app/src/components/dashboard-product/dashboard-product.styles.scss
+++ b/react-app/src/components/dashboard-product/dashboard-product.styles.scss
@@ -3,7 +3,7 @@
     background-color: #F6F6F6;
     border-radius: 5px;
     padding: 0.2em 1em;
-    margin: 1em;
+    margin: 1em 0;
 
     .product-title {
         display: flex;
