--- a/react-app/src/pages/homepage/homepage.styles.scss
+++ b/react-app/src/pages/homepage/homepage.styles.scss
@@ -12,7 +12,7 @@
         padding-top: 10%;
         padding-right: 25%;
         position: absolute;
-        font-size: 1rem;
+        font-size: 1.5rem;
     }
 
     .content {
@@ -20,7 +20,7 @@
         position: absolute;
         font-family: 'Poppins', sans-serif;
         font-weight: 600;
-        font-size: 3.6rem;
+        font-size: 4rem;
     }
 }
 
@@ -39,7 +39,7 @@
         padding-right: 80px;
 
         & > * {
-            margin: 0px 40px;
+            margin: 0 40px;
         }
     }
 }
