Add styling for products with bad reaction warnings

--- a/react-app/src/components/dashboard-product/dashboard-product.styles.scss
+++ b/react-app/src/components/dashboard-product/dashboard-product.styles.scss
@@ -29,3 +29,8 @@
     border: 2px solid #de5b04;
     background-color: rgba(255, 169, 103, 0.25);
 }
+
+.dashboard-product-with-reaction-warning {
+    border: 2px solid #e5bf5e;
+    background-color: rgba(255, 229, 145, 0.25);
+}
