--- a/react-app/src/components/response-items-grid/response-items-grid.styles.scss
+++ b/react-app/src/components/response-items-grid/response-items-grid.styles.scss
@@ -37,3 +37,8 @@
     border: 2px solid #de5b04;
     background-color: rgba(255, 169, 103, 0.25);
 }
+
+.grid-link-with-bad-reaction {
+    border: 2px solid #e5bf5e;
+    background-color: rgba(255, 229, 145, 0.25);
+}
