Add links to dashboard products

--- a/react-app/src/components/dashboard-product/dashboard-product.styles.scss
+++ b/react-app/src/components/dashboard-product/dashboard-product.styles.scss
@@ -9,6 +9,14 @@
         display: flex;
         justify-content: space-between;
         align-items: baseline;
+
+        .product-link {
+            text-decoration: none;
+
+            &:hover {
+                color: #3976bb;
+            }
+        }
     }
 
     .nutrients {
