--- a/react-app/src/App.scss
+++ b/react-app/src/App.scss
@@ -1,3 +1,6 @@
 .App {
-  flex-grow: 1;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr auto;
+    min-height: 100vh;
 }
