--- a/react-app/src/pages/dashboard/dashboard.styles.scss
+++ b/react-app/src/pages/dashboard/dashboard.styles.scss
@@ -4,4 +4,23 @@
     min-height: 70vh;
     padding: 100px 50px 50px; /* TODO: margin-top should be equal to the header height */
     background-color: #E4E3E3;
+
+}
+
+.dashboard-modal {
+    .search {
+        display: grid;
+        grid-template-columns: 50px 1fr 100px;
+        align-content: baseline;
+        border: 2px solid #DFDFDF;
+        border-radius: 4px;
+
+        &:focus-within {
+            border: 2px solid #20C34E;
+        }
+
+        .icon-container {
+            padding: 0.5rem;
+        }
+    }
 }
