--- a/react-app/src/components/response-items-grid/response-items-grid.styles.scss
+++ b/react-app/src/components/response-items-grid/response-items-grid.styles.scss
@@ -23,6 +23,7 @@
                 object-fit: cover;
                 width: inherit;
                 height: inherit;
+                border-radius: 3px;
             }
         }
 
