--- a/react-app/src/components/response-items-grid/response-items-grid.styles.scss
+++ b/react-app/src/components/response-items-grid/response-items-grid.styles.scss
@@ -43,3 +43,9 @@
     border: 2px solid #e5bf5e;
     background-color: rgba(255, 229, 145, 0.25);
 }
+
+.grid-placeholder {
+    padding: 2rem;
+    width: 100%;
+    height: 100%;
+}
