Beautify product info page

--- a/react-app/src/components/main-content/main-content.styles.scss
+++ b/react-app/src/components/main-content/main-content.styles.scss
@@ -7,8 +7,8 @@
     background-color: #E4E3E3;
 
     .section-foreground {
-        min-width: 80%;
-        min-height: 80%;
+        width: 80%;
+        height: 80%;
         margin: 100px 50px 50px; /* TODO: margin-top should be equal to the header height */
         background-color: #F6F6F6;
 
