--- a/react-app/src/components/dashboard-product/dashboard-product.styles.scss
+++ b/react-app/src/components/dashboard-product/dashboard-product.styles.scss
@@ -1,5 +1,5 @@
 .dashboard-product {
-    width: 35em;
+    width: 100%;
     background-color: #F6F6F6;
     border-radius: 5px;
     padding: 0.2em 1em;
@@ -43,13 +43,19 @@
     }
 
     .nutrients {
-        display: inline-flex;
+        display: flex;
         flex-direction: row;
-        justify-content: space-between;
+        flex-wrap: wrap;
+        row-gap: 10px;
+        column-gap: 10px;
         width: 80%; //of the parent container
         list-style: none;
         padding: 0;
         text-align: center;
+
+        & > li {
+            min-width: 80px;
+        }
     }
 
     .quantity {
