--- a/react-app/src/pages/log-in/log-in-page.styles.scss
+++ b/react-app/src/pages/log-in/log-in-page.styles.scss
@@ -20,3 +20,8 @@
 .vertical-line {
     border-left: medium solid #b8b8b8;
 }
+
+.section-foreground {
+    display: grid;
+    align-items: center;
+}
